# rm-biased-parallel-controller

./: .clinerules  .gitignore  Balance_Luntuimatlab.m  GUIDE.md  MATLAB_GUIDE.md  PROJECT_UNDERSTANDING.md  README.en.md  README.md  SIMULATION_GUIDE.md  architecture_refactor_plan.md  get_K.m  robot_params.m
Application/Task/Inc/: Control_Task.h  Robot_Config.h  chassis_control.h  control_io.h  lqr_controller.h  mode_state_machine.h  sensor_fusion.h  vmc_kinematics.h
Application/Task/Src/: CAN_Task.c  Control_Task.c  INS_Task.c  chassis_control.c  control_io.c  lqr_controller.c  mode_state_machine.c  sensor_fusion.c  vmc_kinematics.c
BSP/Src/: bsp_can.c  bsp_uart.c
Components/Device/Src/: Bmi088.c  Motor.c
MDK-ARM/: COD_H7_Template.uvguix.zhan  COD_H7_Template.uvoptx  COD_H7_Template.uvprojx  architecture_analysis_report.md
MDK-ARM/COD_H7_Template/: COD_H7_Template.axf  COD_H7_Template.build_log.htm  COD_H7_Template.hex  COD_H7_Template.htm  COD_H7_Template.map  COD_H7_Template_COD_H7_Template.dep
simulation_core/: CMakeLists.txt  bindings.cpp  wheel_legged_dynamics.cpp  wheel_legged_dynamics.hpp
tools/: lqr_gain_schedule.py
